[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Scenes/GameMode2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/19413.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/HUD/reset-icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/HUD/ok-icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 128
outline_size = 2
outline_color = Color( 0, 0.329412, 0.423529, 1 )
font_data = ExtResource( 3 )

[node name="GameMode2" type="Node2D"]
script = ExtResource( 1 )

[node name="MainControl" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.658824, 0.823529, 0.94902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainControl/ColorRect"]
visible = false
margin_left = 81.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "Score: "

[node name="Control" type="Control" parent="MainControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 35.0
margin_right = 512.0
margin_bottom = 187.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainControl/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_right = -90.0
color = Color( 0.690196, 0.878431, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainControl/Control/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.419608, 0.619608, 1 )
text = "Ин-на"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="MainControl/Control/ColorRect"]
modulate = Color( 0.941176, 0.180392, 0.180392, 1 )
self_modulate = Color( 0.847059, 0.117647, 0.117647, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -68.0
margin_right = 1614.0
margin_bottom = 1532.0
rect_scale = Vector2( 0.08, 0.08 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="MainControl/Control/ColorRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -60.0
margin_right = 466.0
margin_bottom = 540.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )

[node name="Control2" type="Control" parent="MainControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 206.0
margin_right = 512.0
margin_bottom = 391.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainControl/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_right = -90.0
color = Color( 0.52549, 0.768627, 0.92549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerHBox" type="HBoxContainer" parent="MainControl/Control2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="MainControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 406.0
margin_right = 512.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainControl/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_right = -30.0
margin_bottom = 1.0
color = Color( 0, 0.419608, 0.619608, 0.647059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionHBox" type="HBoxContainer" parent="MainControl/Control3/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="MainControl/Control/ColorRect/Button" to="." method="_on_Reset_Button_pressed"]
[connection signal="pressed" from="MainControl/Control/ColorRect/Button2" to="." method="_on_Go_Button_pressed"]
[connection signal="back" from="HUD" to="." method="_on_HUD_back"]
[connection signal="help" from="HUD" to="." method="_on_HUD_help"]
